Updated to add working Bluetooth detection

--- a/Bluetooth Device Scanner/Properties/AndroidManifest.xml
+++ b/Bluetooth Device Scanner/Properties/AndroidManifest.xml
@@ -3,7 +3,11 @@
           android:versionCode="1" 
           android:versionName="1.0" 
           package="Bluetooth_Device_Scanner.Bluetooth_Device_Scanner">
-  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+  <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="27" />
   <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
   </application>
+  <uses-permission android:name="android.permission.BLUETOOTH" />
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
